--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,12 +13,12 @@
   <body>
     <%= render "layouts/navbar" %>
     <% flash.each do |message_type, message| %>
-      <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
+      <div class="alert alert-<%= message_type %>" style="padding-top: 60px;"><%= message %></div>
     <% end %>
     <p  class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <div class="container">
       <%= yield %>
     </div>
-  </body>
+  </body>  
 </html>
